# cs2-network-diagnostics

./: .gitattributes  .gitignore  README.md  build.spec  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
network_diagnostics/: __main__.py  diagnostics.py  logging_.py  utils.py
network_diagnostics/gui/: gui.py  history_window.py  logging_.py  main_window.py
resources/gui/: history-window.ui  main-window.ui  resources.qrc
scripts/: build.sh  clean.sh  compile-ui.sh  dist.sh
